--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = ";export $(grep -v '^#' .env | xargs); ./tmp/main"
-  cmd = "go build -o ./tmp/main ./cmd/main.go"
+  cmd = "go build -o ./tmp/main ./cmd/ratatoskr/main.go"
   delay = 0
   exclude_dir = ["tmp"]
   exclude_file = []
